1 попытка сдачи ПР1

--- a/styles/style.css
+++ b/styles/style.css
@@ -55,7 +55,7 @@ ol {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 30px;
-  margin: 136px 30px;
+  margin: auto;
 }
 
 .search-form {
