--- a/styles/style.css
+++ b/styles/style.css
@@ -12,7 +12,7 @@ html {
   display: flex;
   inline-size: 1200px;
   block-size: 100%;
-  margin: auto;
+  margin: 0 auto;
   color: #fff;
   font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
@@ -55,7 +55,7 @@ ol {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 30px;
-  margin: auto;
+  margin: 135px 30px;
 }
 
 .search-form {
