--- a/styles/style.css
+++ b/styles/style.css
@@ -55,7 +55,7 @@ ol {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 30px;
-  margin: 135px 30px;
+  margin: auto;
 }
 
 .search-form {
@@ -69,7 +69,6 @@ ol {
   flex-direction: column;
   gap: 21px;
   width: 399px;
-  height: 534px;
 }
 
 .content__list-container {
@@ -112,20 +111,18 @@ ol {
 }
 
 .search-form__fieldset-title {
-  font-family: "Fira Sans Condensed";
+  font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 21.6px;
-  letter-spacing: 0%;
   margin-bottom: 6px;
 }
 
 .title {
-  font-family: Oswald;
+  font-family: Oswald, "Open Sans";
   font-weight: 700;
   font-size: 75px;
   line-height: 70.5px;
-  letter-spacing: 0%;
   text-transform: uppercase;
 }
 
@@ -140,8 +137,16 @@ ol {
   display: block;
 }
 
+.content__card-link:active {
+  background-color: rgba(84, 80, 80, 1);
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+}
+
 .content__video-card-title {
-  font-family: Oswald;
+  font-family: Oswald, "Open Sans";
   font-weight: 700;
   font-size: 30px;
   line-height: 30px;
@@ -153,17 +158,19 @@ ol {
 }
 
 .content__video-card-description {
-  font-family: "Fira Sans Condensed";
+  font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 16.2px;
-  line-clamp: 1;
-  -webkit-line-clamp: 1;
+  text-overflow: ellipsis;
   overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
 }
 
 .content__video-card-description-container {
-  font-family: "Fira Sans Condensed";
+  font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 16.2px;
@@ -172,8 +179,6 @@ ol {
   flex-direction: column;
   gap: 7px;
   width: 194px;
-  -webkit-line-clamp: 1;
-  overflow: hidden;
 }
 
 .content__list-item {
@@ -200,7 +205,7 @@ ol {
 
 .search-form__textfield {
   width: 225px;
-  font-family: "Fira Sans Condensed";
+  font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 21.6px;
@@ -269,7 +274,7 @@ ol {
   border: 1px solid #fff;
   background-color: transparent;
   color: #fff;
-  font-family: "Fira Sans Condensed";
+  font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 21.6px;
@@ -312,15 +317,7 @@ ol {
   background-color: rgba(84, 80, 80, 1);
 }
 
-.content__video-card-description-container:hover {
-  text-decoration: underline;
-}
-
 .content__list-item {
   padding-left: 3px;
   padding-right: 3px;
-}
-
-.search-form__label:hover {
-  text-decoration: none;
 }
